--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="どこかの208号室の日記です。">
   <meta name="keywords" content="">
-  <title>テンプレート</title>
+  <title>#208</title>
   <link rel="stylesheet" href="common/css/style.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="l-header">
-      <h1>タイトル</h1>
+      <h1>#208</h1>
       <nav>
         <ul>
           <li></li>
@@ -24,7 +24,52 @@
 
   <main>
     <div class="l-main">
+      <div class="c-visual">
 
+      </div>
+      <div class="p-newpost">
+        <div class="l-contaier">
+          <section>
+            <h2></h2>
+            <div class="c-flex">
+              <p class="c-img"><img src="" alt=""></p>
+              <div class="c-text">
+                <p class="c-date"><time datatime=""></time></p>
+                <h4></h4>
+                <p class="c-category"><a href=""></a></p>
+                <p class="c-btn"><a href=""></a></p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+      <div class="p-journal">
+        <div class="l-container">
+          <section>
+            <ul>
+              <li class="p-post">
+                <p class="c-img"><img src="" alt=""></p>
+                <p class="c-date"><time datatime=""></time></p>
+                <h4></h4>
+                <p class="c-category"><a href=""></a></p>
+              </li>
+              <li class="p-post">
+                <p class="c-img"><img src="" alt=""></p>
+                <p class="c-date"><time datatime=""></time></p>
+                <h4></h4>
+                <p class="c-category"><a href=""></a></p>
+              </li>
+              <li class="p-post">
+                <p class="c-img"><img src="" alt=""></p>
+                <p class="c-date"><time datatime=""></time></p>
+                <h4></h4>
+                <p class="c-category"><a href=""></a></p>
+              </li>
+            </ul>
+            <p class="c-btn"><a href=""></a></p>
+          </section>
+        </div>
+      </div>
     </div>
   </main>
 
@@ -37,6 +82,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="common/js/script.js"></script>
   <script src="js/script.js"></script>
-  
+
 </body>
 </html>
