--- a/index.html
+++ b/index.html
@@ -13,30 +13,34 @@
 <body>
   <header>
     <div class="l-header">
-      <h1>#208</h1>
-      <nav>
-        <ul>
-          <li></li>
-        </ul>
-      </nav>
+      <div class="u-flex">
+        <h1>#208</h1>
+        <nav>
+          <ul class="u-flex">
+            <li><a href="/">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="/JOURNAL">JOURNAL</a></li>
+            <li><a href="/PHOTO">PHOTO</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
 
   <main>
     <div class="l-main">
-      <div class="c-visual">
-
+      <div class="p-visual">
       </div>
       <div class="p-newpost">
         <div class="l-contaier">
           <section>
-            <h2></h2>
-            <div class="c-flex">
-              <p class="c-img"><img src="" alt=""></p>
-              <div class="c-text">
-                <p class="c-date"><time datatime=""></time></p>
+            <h2><img src="images/" alt="new post"></h2>
+            <div class="u-flex c-new">
+              <p class="c-new__img"><img src="" alt=""></p>
+              <div class="c-new__text">
+                <p class="c-new__date"><time datatime=""></time></p>
                 <h4></h4>
-                <p class="c-category"><a href=""></a></p>
+                <p class="c-new__category"><a href=""></a></p>
                 <p class="c-btn"><a href=""></a></p>
               </div>
             </div>
@@ -46,36 +50,54 @@
       <div class="p-journal">
         <div class="l-container">
           <section>
+            <h3>JOURNAL</h3>
             <ul>
-              <li class="p-post">
-                <p class="c-img"><img src="" alt=""></p>
-                <p class="c-date"><time datatime=""></time></p>
+              <li class="c-post">
+                <p class="c-post__img"><img src="" alt=""></p>
+                <p class="c-post__date"><time datatime=""></time></p>
                 <h4></h4>
-                <p class="c-category"><a href=""></a></p>
+                <p class="c-post__category"><a href=""></a></p>
               </li>
-              <li class="p-post">
-                <p class="c-img"><img src="" alt=""></p>
-                <p class="c-date"><time datatime=""></time></p>
+              <li class="c-post">
+                <p class="c-post__img"><img src="" alt=""></p>
+                <p class="c-post__date"><time datatime=""></time></p>
                 <h4></h4>
-                <p class="c-category"><a href=""></a></p>
+                <p class="c-post__category"><a href=""></a></p>
               </li>
-              <li class="p-post">
-                <p class="c-img"><img src="" alt=""></p>
-                <p class="c-date"><time datatime=""></time></p>
+              <li class="c-post">
+                <p class="c-post__img"><img src="" alt=""></p>
+                <p class="c-post__date"><time datatime=""></time></p>
                 <h4></h4>
-                <p class="c-category"><a href=""></a></p>
+                <p class="c-post__category"><a href=""></a></p>
               </li>
             </ul>
-            <p class="c-btn"><a href=""></a></p>
+            <p class="c-btn"><a href="/JOURNAL">ALL POST</a></p>
           </section>
         </div>
+      </div>
+      <div class="p-photo">
+        <div class="c-photo">
+          <h3>PHOTO</h3>
+          <p class="c-photo__text">日常と旅の記録</p>
+          <p><a href="/PHOTO">ALL POST</a></p>
+        </div>
+        <p class=""></p>
       </div>
     </div>
   </main>
 
   <footer>
     <div class="l-footer">
-
+      <div class="l-contaier">
+        <div class="u-flex">
+          <ul class="u-flex">
+            <li><a href="/">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="/JOURNAL">JOURNAL</a></li>
+            <li><a href="/PHOTO">PHOTO</a></li>
+          </ul>
+        </div>
+      </div>
     </div>
   </footer>
 
