--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
   <header>
     <div class="l-header">
-      <div class="u-flex">
+      <div class="p-headercontents u-flex">
         <h1>#208</h1>
         <nav>
           <ul class="u-flex">
             <li><a href="/">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
-            <li><a href="/JOURNAL">JOURNAL</a></li>
-            <li><a href="/PHOTO">PHOTO</a></li>
+            <li><a href="/jounal">JOURNAL</a></li>
+            <li><a href="/photo">PHOTO</a></li>
           </ul>
         </nav>
       </div>
@@ -38,10 +38,10 @@
             <div class="u-flex c-new">
               <p class="c-new__img"><img src="" alt=""></p>
               <div class="c-new__text">
-                <p class="c-new__date"><time datatime=""></time></p>
-                <h4></h4>
-                <p class="c-new__category"><a href=""></a></p>
-                <p class="c-btn"><a href=""></a></p>
+                <p class="c-new__date"><time datatime="2019.07.28">2019.07.28</time></p>
+                <h4>勇気をくれる本</h4>
+                <p class="c-new__category"><a href="">#小説</a></p>
+                <p class="c-btn"><a href="/jounal">READ MORE</a></p>
               </div>
             </div>
           </section>
@@ -53,25 +53,25 @@
             <h3>JOURNAL</h3>
             <ul>
               <li class="c-post">
-                <p class="c-post__img"><img src="" alt=""></p>
-                <p class="c-post__date"><time datatime=""></time></p>
-                <h4></h4>
+                <a href="/jounal">
+                  
+                </a>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
               <li class="c-post">
                 <p class="c-post__img"><img src="" alt=""></p>
-                <p class="c-post__date"><time datatime=""></time></p>
-                <h4></h4>
+                <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
+                <h4>きみのことが好きです</h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
               <li class="c-post">
                 <p class="c-post__img"><img src="" alt=""></p>
-                <p class="c-post__date"><time datatime=""></time></p>
-                <h4></h4>
+                <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
+                <h4>日常の物語を大切にしたくなる本</h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
             </ul>
-            <p class="c-btn"><a href="/JOURNAL">ALL POST</a></p>
+            <p class="c-btn"><a href="/jounal">ALL POST</a></p>
           </section>
         </div>
       </div>
@@ -88,14 +88,18 @@
 
   <footer>
     <div class="l-footer">
-      <div class="l-contaier">
-        <div class="u-flex">
-          <ul class="u-flex">
-            <li><a href="/">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="/JOURNAL">JOURNAL</a></li>
-            <li><a href="/PHOTO">PHOTO</a></li>
-          </ul>
+      <div class="l-container">
+        <div class="p-footercontents">
+          <div class="u-flex c-contents">
+            <p><img src="images/" alt="#208"></p>
+            <ul class="u-flex">
+              <li><a href="/">HOME</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="/jounal">JOURNAL</a></li>
+              <li><a href="/photo">PHOTO</a></li>
+            </ul>
+          </div>
+          <p class="p-footercontents__copyright u-center"><small>© 2019 aiko yoshida</small></p>
         </div>
       </div>
     </div>
