--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
             <ul>
               <li class="c-post">
                 <a href="/jounal">
-                  
+                  <p class="c-post__img"><img src="" alt=""></p>
+                  <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
                 </a>
+                <p class="c-post__img"><img src="" alt=""></p>
+                <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
+                <h4>ねこと海の街</h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
               <li class="c-post">
