--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="l-header">
       <div class="p-headercontents u-flex">
-        <h1>#208</h1>
+        <h1><img src="common/images/logo_common01.png" alt="#208"></h1>
         <nav>
           <ul class="u-flex">
             <li><a href="/">HOME</a></li>
@@ -32,14 +32,16 @@
       <div class="p-visual">
       </div>
       <div class="p-newpost">
-        <div class="l-contaier">
+        <div class="l-container">
           <section>
-            <h2><img src="images/" alt="new post"></h2>
+            <h2><img src="images/tit_index01.png" alt="new post"></h2>
             <div class="u-flex c-new">
-              <p class="c-new__img"><img src="" alt=""></p>
+              <p class="c-new__img"><a href="/jounal"><img src="images/dummy01.jpg" alt=""></a></p>
               <div class="c-new__text">
-                <p class="c-new__date"><time datatime="2019.07.28">2019.07.28</time></p>
-                <h4>勇気をくれる本</h4>
+                <a href="/jounal">
+                  <span class="c-new__date"><time datatime="2019.07.28">2019.07.28</time></span>
+                  <span class="c-new__title">勇気をくれる本</span>
+                </a>
                 <p class="c-new__category"><a href="">#小説</a></p>
                 <p class="c-btn"><a href="/jounal">READ MORE</a></p>
               </div>
@@ -51,27 +53,29 @@
         <div class="l-container">
           <section>
             <h3>JOURNAL</h3>
-            <ul>
+            <ul class="u-flex">
               <li class="c-post">
                 <a href="/jounal">
-                  <p class="c-post__img"><img src="" alt=""></p>
-                  <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
+                  <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
+                  <span class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></span>
                 </a>
-                <p class="c-post__img"><img src="" alt=""></p>
-                <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
-                <h4>ねこと海の街</h4>
+                <h4><a href="/jounal">ねこと海の街</a></h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
               <li class="c-post">
-                <p class="c-post__img"><img src="" alt=""></p>
-                <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
-                <h4>きみのことが好きです</h4>
+                <a href="/jounal">
+                  <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
+                  <span class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></span>
+                </a>
+                <h4><a href="/jounal">きみのことが好きです</a></h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
               <li class="c-post">
-                <p class="c-post__img"><img src="" alt=""></p>
-                <p class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></p>
-                <h4>日常の物語を大切にしたくなる本</h4>
+                <a href="/jounal">
+                  <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
+                  <span class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></span>
+                </a>
+                <h4><a href="/jounal">日常の物語を大切にしたくなる本</a></h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
             </ul>
@@ -83,9 +87,9 @@
         <div class="c-photo">
           <h3>PHOTO</h3>
           <p class="c-photo__text">日常と旅の記録</p>
-          <p><a href="/PHOTO">ALL POST</a></p>
+          <p class="c-btn"><a href="/photo">ALL POST</a></p>
         </div>
-        <p class=""></p>
+        <p class="p-photo__main"><img src="images/pic_index02.jpg" alt=""></p>
       </div>
     </div>
   </main>
@@ -95,7 +99,7 @@
       <div class="l-container">
         <div class="p-footercontents">
           <div class="u-flex c-contents">
-            <p><img src="images/" alt="#208"></p>
+            <p class="p-footercontents__logo"><img src="common/images/logo_common01.png" alt="#208"></p>
             <ul class="u-flex">
               <li><a href="/">HOME</a></li>
               <li><a href="#">ABOUT</a></li>
