--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <div class="l-header">
       <div class="p-headercontents u-flex">
-        <h1><img src="common/images/logo_common01.png" alt="#208"></h1>
+        <h1><a href="/"><img src="common/images/logo_common01.png" alt="#208"></a></h1>
         <nav>
           <ul class="u-flex">
             <li><a href="/">HOME</a></li>
@@ -74,8 +74,7 @@
                 <a href="/jounal">
                   <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
                   <span class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></span>
-                </a>
-                <h4><a href="/jounal">日常の物語を大切にしたくなる本</a></h4>
+                </a>                <h4><a href="/jounal">日常の物語を大切にしたくなる本</a></h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
             </ul>
@@ -90,6 +89,17 @@
           <p class="c-btn"><a href="/photo">ALL POST</a></p>
         </div>
         <p class="p-photo__main"><img src="images/pic_index02.jpg" alt=""></p>
+      </div>
+      <div class="p-about">
+        <div class="l-container">
+          <div class="u-flex c-profile">
+            <p class="c-profile__img"><img src="images/dummy01.jpg" alt=""></p>
+            <div class="c-profile__info">
+              <p class="c-profile__name">aico</p>
+              <p class="c-profile__text">滋賀県出身<br>旅行に行くこと、絵を描くこと、動物が好きです。</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
