--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>#208</title>
   <link rel="stylesheet" href="common/css/style.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,500,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -39,7 +41,7 @@
               <p class="c-new__img"><a href="/jounal"><img src="images/dummy01.jpg" alt=""></a></p>
               <div class="c-new__text">
                 <a href="/jounal">
-                  <span class="c-new__date"><time datatime="2019.07.28">2019.07.28</time></span>
+                  <span class="c-new__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
                   <span class="c-new__title">勇気をくれる本</span>
                 </a>
                 <p class="c-new__category"><a href="">#小説</a></p>
@@ -57,7 +59,7 @@
               <li class="c-post">
                 <a href="/jounal">
                   <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
-                  <span class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></span>
+                  <span class="c-post__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
                 </a>
                 <h4><a href="/jounal">ねこと海の街</a></h4>
                 <p class="c-post__category"><a href=""></a></p>
@@ -65,7 +67,7 @@
               <li class="c-post">
                 <a href="/jounal">
                   <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
-                  <span class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></span>
+                  <span class="c-post__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
                 </a>
                 <h4><a href="/jounal">きみのことが好きです</a></h4>
                 <p class="c-post__category"><a href=""></a></p>
@@ -73,7 +75,7 @@
               <li class="c-post">
                 <a href="/jounal">
                   <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
-                  <span class="c-post__date"><time datatime="2019.07.28">2019.07.28</time></span>
+                  <span class="c-post__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
                 </a>                <h4><a href="/jounal">日常の物語を大切にしたくなる本</a></h4>
                 <p class="c-post__category"><a href=""></a></p>
               </li>
