--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
         </div>
       </div>
       <div class="p-photo">
-        <div class="c-photo">
-          <h3>PHOTO</h3>
-          <p class="c-photo__text">日常と旅の記録</p>
-          <p class="c-btn"><a href="/photo">ALL POST</a></p>
+        <div class="c-photocontents">
+          <div class="c-photocontents__textbox">
+            <h3>PHOTO</h3>
+            <p class="c-photocontents__text">日常と旅の記録</p>
+            <p class="c-btn"><a href="/photo">ALL POST</a></p>
+          </div>
         </div>
         <p class="p-photo__main"><img src="images/pic_index02.jpg" alt=""></p>
       </div>
