--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
       <div class="p-photo">
         <div class="c-photocontents">
-          <div class="c-photocontents__textbox">
+          <div class="c-photocontents__textbox l-container">
             <h3>PHOTO</h3>
             <p class="c-photocontents__text">日常と旅の記録</p>
             <p class="c-btn"><a href="/photo">ALL POST</a></p>
