--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   <span class="c-post__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
                 </a>
                 <h4><a href="/jounal">ねこと海の街</a></h4>
-                <p class="c-post__category"><a href=""></a></p>
+                <p class="c-post__category"><a href="">#旅行</a></p>
               </li>
               <li class="c-post">
                 <a href="/jounal">
@@ -70,14 +70,14 @@
                   <span class="c-post__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
                 </a>
                 <h4><a href="/jounal">きみのことが好きです</a></h4>
-                <p class="c-post__category"><a href=""></a></p>
+                <p class="c-post__category"><a href="">#漫画</a></p>
               </li>
               <li class="c-post">
                 <a href="/jounal">
                   <span class="c-post__img"><img src="images/dummy02.jpg" alt=""></span>
                   <span class="c-post__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
                 </a>                <h4><a href="/jounal">日常の物語を大切にしたくなる本</a></h4>
-                <p class="c-post__category"><a href=""></a></p>
+                <p class="c-post__category"><a href="">#小説</a></p>
               </li>
             </ul>
             <p class="c-btn"><a href="/jounal">ALL POST</a></p>
