--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
             <div class="u-flex c-new">
               <p class="c-new__img"><a href="/jounal"><img src="images/dummy01.jpg" alt=""></a></p>
               <div class="c-new__text">
-                <a href="/jounal">
-                  <span class="c-new__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
-                  <span class="c-new__title">勇気をくれる本</span>
-                </a>
-                <p class="c-new__category"><a href="">#小説</a></p>
+                <div class="c-new__textcontents">
+                  <a href="/jounal">
+                    <span class="c-new__date u-opensans"><time datatime="2019.07.28">2019.07.28</time></span>
+                    <span class="c-new__title">勇気をくれる本</span>
+                  </a>
+                  <p class="c-new__category"><a href="">#小説</a></p>
+                </div>
                 <p class="c-btn"><a href="/jounal">READ MORE</a></p>
               </div>
             </div>
