--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="p-footercontents">
           <div class="u-flex c-contents">
             <p class="p-footercontents__logo"><img src="common/images/logo_common01.png" alt="#208"></p>
-            <ul class="u-flex">
+            <ul class="p-footercontents__menu u-flex">
               <li><a href="/">HOME</a></li>
               <li><a href="#">ABOUT</a></li>
               <li><a href="/jounal">JOURNAL</a></li>
