modify headermenu sp

--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
     <div class="l-header">
       <div class="p-headercontents u-flex">
         <h1><a href="/"><img src="common/images/logo_common01.png" alt="#208"></a></h1>
+        <div class="p-spmenu u-sp">
+          <p class="c-spbtn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </p>
+        </div>
         <nav>
-          <ul class="u-flex">
+          <ul class="p-headermenu u-flex">
             <li><a href="/">HOME</a></li>
             <li><a href="#">ABOUT</a></li>
             <li><a href="/jounal">JOURNAL</a></li>
