--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
           </p>
         </div>
         <nav>
-          <ul class="p-headermenu u-flex">
-            <li><a href="/">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="/jounal">JOURNAL</a></li>
-            <li><a href="/photo">PHOTO</a></li>
-          </ul>
+          <div class="u-displaynone__sp c-spheadermenu">
+            <ul class="p-headermenu u-flex">
+              <li><a href="/">HOME<span class="p-headermenu__subja u-sp">ホーム</span></a></li>
+              <li><a href="#">ABOUT<span class="p-headermenu__subja u-sp">208号室</span></a></li>
+              <li><a href="/jounal">JOURNAL<span class="p-headermenu__subja u-sp">記事</span></a></li>
+              <li><a href="/photo">PHOTO<span class="p-headermenu__subja u-sp">写真</span></a></li>
+            </ul>
+          </div>
         </nav>
       </div>
     </div>
