--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="l-header">
       <div class="p-headercontents u-flex">
         <h1><a href="/"><img src="common/images/logo_common01.png" alt="#208"></a></h1>
-        <div class="p-spmenu u-sp">
+        <div class="p-spmenu u-sp" id="spmenubtn">
           <p class="c-spbtn">
             <span></span>
             <span></span>
@@ -25,7 +25,8 @@
           </p>
         </div>
         <nav>
-          <div class="u-displaynone__sp c-spheadermenu">
+          <div class="u-displaynone__sp c-spheadermenu" id="menu">
+            <p class="c-spheadermenu__menulogo"><img src="common/images/logo_common01.png" alt="#208"></p>
             <ul class="p-headermenu u-flex">
               <li><a href="/">HOME<span class="p-headermenu__subja u-sp">ホーム</span></a></li>
               <li><a href="#">ABOUT<span class="p-headermenu__subja u-sp">208号室</span></a></li>
