--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           </p>
         </div>
         <nav>
-          <div class="u-displaynone__sp c-spheadermenu" id="menu">
-            <p class="c-spheadermenu__menulogo"><img src="common/images/logo_common01.png" alt="#208"></p>
+          <div class="c-spheadermenu" id="menu">
+            <p class="c-spheadermenu__menulogo u-sp"><img src="common/images/logo_common01.png" alt="#208"></p>
             <ul class="p-headermenu u-flex">
               <li><a href="/">HOME<span class="p-headermenu__subja u-sp">ホーム</span></a></li>
               <li><a href="#">ABOUT<span class="p-headermenu__subja u-sp">208号室</span></a></li>
